// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownMenu should render 1`] = `
<div
  className="analytics-dropdown-menu dropdown-menu dropdown-menu-indicator-end"
  onMouseLeave={[Function]}
>
  <ul
    className="list-unstyled"
  />
</div>
`;

exports[`DropdownMenu should render w/ items 1`] = `
<div
  className="analytics-dropdown-menu dropdown-menu dropdown-menu-indicator-end"
  onMouseLeave={[Function]}
>
  <ul
    className="list-unstyled"
  >
    <OptionItem
      dropdownChildrenParentNode={null}
      index={0}
      item={
        Object {
          "items": Array [
            Object {
              "category": "category1",
              "checked": true,
              "inputType": "radio",
              "label": "label a",
              "value": "1",
            },
            Object {
              "category": "category1",
              "checked": false,
              "inputType": "radio",
              "label": "label b",
              "value": "2",
            },
            Object {
              "category": "category1",
              "checked": false,
              "inputType": "radio",
              "label": "label c",
              "value": "100",
            },
            Object {
              "category": "category1",
              "checked": false,
              "inputType": "radio",
              "label": "label d",
              "value": "50",
            },
          ],
          "label": "Location",
          "name": "location",
          "value": "100",
        }
      }
      key="0"
      onChildOver={[Function]}
      onMouseOutSubitem={[Function]}
      onMouseOverSubitem={[Function]}
    />
    <OptionItem
      dropdownChildrenParentNode={null}
      index={1}
      item={
        Object {
          "items": Array [
            Object {
              "category": "category2",
              "checked": true,
              "inputType": "radio",
              "items": Array [
                Object {
                  "category": "category2",
                  "checked": true,
                  "inputType": "radio",
                  "label": "label a",
                  "value": "1",
                },
                Object {
                  "category": "category2",
                  "checked": false,
                  "inputType": "radio",
                  "label": "label b",
                  "value": "2",
                },
                Object {
                  "category": "category2",
                  "checked": false,
                  "inputType": "radio",
                  "label": "label c",
                  "value": "100",
                },
                Object {
                  "category": "category2",
                  "checked": false,
                  "inputType": "radio",
                  "label": "label d",
                  "value": "50",
                },
              ],
              "label": "label a",
              "value": "1",
            },
            Object {
              "category": "category2",
              "checked": false,
              "inputType": "radio",
              "label": "label b",
              "value": "2",
            },
            Object {
              "category": "category2",
              "checked": false,
              "inputType": "radio",
              "label": "label c",
              "value": "100",
            },
            Object {
              "category": "category2",
              "checked": false,
              "inputType": "radio",
              "label": "label d",
              "value": "50",
            },
          ],
          "label": "Devices",
          "name": "devices",
          "value": "100",
        }
      }
      key="1"
      onChildOver={[Function]}
      onMouseOutSubitem={[Function]}
      onMouseOverSubitem={[Function]}
    />
  </ul>
</div>
`;

exports[`DropdownMenu should render w/ search 1`] = `
<div
  className="analytics-dropdown-menu dropdown-menu dropdown-menu-indicator-end"
  onMouseLeave={[Function]}
>
  <div
    className="analytics-dropdown-menu-search-container input-group"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      className="input-group-item"
    >
      <input
        aria-label="Search"
        className="form-control input-group-inset input-group-inset-after"
        onChange={[Function]}
        placeholder="Search"
        type="text"
      />
      <div
        className="input-group-inset-item input-group-inset-item-after"
      >
        <button
          className="btn btn-unstyled d-md-none"
          type="button"
        >
          <Icon
            symbol="times"
          />
        </button>
        <button
          className="btn btn-unstyled d-none d-md-inline-block"
          type="button"
        >
          <Icon
            symbol="search"
          />
        </button>
      </div>
    </div>
  </div>
  <ul
    className="list-unstyled"
  />
</div>
`;

exports[`InputItem should render 1`] = `
<li
  className="dropdown-item dropdown-item-custom"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <div
    className="custom-control custom-undefined"
  >
    <label>
      <input
        className="custom-control-input"
        name="location"
        onChange={[Function]}
        value="100"
      />
      <span
        className="custom-control-label"
      >
        <TextTruncate
          className="custom-control-label-text"
          inline={false}
          title="Location"
        />
      </span>
    </label>
  </div>
</li>
`;

exports[`OptionItem should render 1`] = `
<li
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <a
    className="dropdown-item "
    href="javascript:;"
  >
    <TextTruncate
      inline={false}
      title="Location"
    />
    <div
      className="dropdown-item-indicator"
    >
      <ForwardRef
        displayType="secondary"
        label="100"
      />
      <Icon
        className="ml-1"
        symbol="angle-right"
      />
    </div>
  </a>
</li>
`;
